syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "MetaResponses";

package polypheny.protointerface;

message DbmsVersionResponse {
  string dbms_name = 1;
  string version_name = 2;
  int32 major_version = 3;
  int32 minor_version = 4;
}

message LanguageResponse {
  repeated string language_names = 1;
}

message DatabasesResponse {
  repeated Database databases = 1;
}

message Database {
  string database_name = 1;
  string owner_name = 2;
  string default_namespace_name = 3;
}

message TableTypesResponse {
  repeated TableType table_types = 1;
}

message TableType {
  string table_type = 1;
}

message TypesResponse {
  repeated Type types = 1;
}

message Type {
  string type_name = 1;
  int32 precision = 2;
  optional string literal_prefix = 3;
  optional string literal_suffix = 4;
  bool is_case_sensitive = 5;
  int32 is_searchable = 6;
  bool is_auto_increment = 7;
  int32 min_scale = 8;
  int32 max_scale = 9;
  int32 radix = 10;
}

message UserDefinedTypesResponse {
  repeated UserDefinedType user_defined_types = 1;
}

message UserDefinedType {
  string type_name = 1;
  repeated ValueMeta value_metas= 2;
}

message ValueMeta {
  string value_name = 1;
}

message MetaStringResponse {
  string string = 1;
}

message ProceduresResponse {
  repeated Procedure procedures = 1;
}

message Procedure {
  string trivial_name = 1;
  string input_parameters = 2;
  string description = 3;
  ReturnType return_type = 4;
  string unique_name = 5;

  enum ReturnType {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    NO_RESULT = 2;
    RESULT = 3;
  }
}

message ClientInfoProperties {
  map<string, string> properties = 1;
}

message ClientInfoPropertiesResponse {
}

message ClientInfoPropertyMetaResponse {
  repeated ClientInfoPropertyMeta client_info_property_metas = 1;
}

message ClientInfoPropertyMeta {
  string key = 1;
  string default_value = 2;
  int32 maxlength = 3;
  string description = 4;
}

message FunctionsResponse {
  repeated Function functions = 1;
}

message Function {
  string name = 1;
  string syntax = 2;
  string function_category = 3;
  bool is_table_function = 4;
}