syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "NamespaceMetaResponses";

package polypheny.protointerface;

message NamespacesResponse {
  repeated Namespace namespaces = 1;
}

message EntitiesResponse {
  repeated Entity entities = 1;
}

message Namespace {
  string namespace_name = 1;
  string database_name = 2;
  string owner_name = 3;
  bool is_case_sensitive = 4;
  optional string namespace_type = 5;
}

message Entity {
  oneof Entity {
    Table table = 1;
    Graph graph = 2;
    Document document= 3;
    // add other entities known in other models
  }
}

message Table {
  string source_database_name = 1;
  string namespace_name = 2;
  string table_name = 3;
  string table_type = 4;
  string owner_name = 5;
  repeated Column columns = 6;
  optional PrimaryKey primary_key = 7;
  repeated ForeignKey foreign_keys = 8;
  repeated ForeignKey exported_keys = 9;
  repeated Index indexes = 10;
}

message Column {
  string database_name = 1;
  string namespace_name = 2;
  string table_name = 3;
  string column_name = 4;
  string type_name = 5;
  optional int32 type_length = 6;
  optional int32 type_scale = 7;
  bool is_nullable = 8;
  optional string default_value_as_string = 9;
  int32 column_index = 10;
  optional string collation = 11;
  bool is_hidden = 12;
  ColumnType column_type = 13;
  enum ColumnType {
    UNSPECIFIED = 0;
    REGULAR = 1;
    CALUCLATED = 2;
    VERSION = 3;
  }
}

message PrimaryKey {
  string database_name = 1;
  string namespace_name = 2;
  string table_name = 3;
  repeated Column columns = 4;
}

message ForeignKey {
  optional string referenced_database_name = 1;
  optional string referenced_namespace_name = 2;
  string referenced_table_name = 3;
  repeated Column referenced_columns = 4;
  repeated Column foreign_columns = 8;
  int32 update_rule = 10;
  int32 delete_rule = 11;
  optional string key_name = 12;
}

message Index {
  string database_name = 1;
  string namespace_name = 2;
  string table_name = 3;
  bool unique = 4;
  string index_name = 5;
  repeated Column columns = 6;
  int64 location = 8;
  int32 index_type = 9;
}

message Graph {
}

message Document {
}