syntax = "proto3";

import "value.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "RelationalResult";

package polypheny.protointerface;

message RelationalFrame {
  repeated ColumnMeta column_meta = 1;
  repeated Row rows = 2;
}

message ColumnMeta {
  int32 column_index = 1;
  bool is_nullable = 2;
  int32 length = 3;
  string column_label = 4;
  string column_name = 5;
  int32 precision = 6;
  string entity_name = 7;
  string schema_name = 8;
  TypeMeta type_meta = 9;
  int32 scale = 10;
  string namespace = 11;
}

message FieldMeta {
  int32 field_index = 1;
  bool is_nullable = 2;
  int32 length = 3;
  string field_name = 4;
  int32 precision = 6;
  TypeMeta type_meta = 9;
  int32 scale = 10;
}

message TypeMeta {
  ProtoPolyType proto_value_type = 1;
  optional StructMeta struct_meta = 2;
  optional ArrayMeta array_meta = 3;
}

message StructMeta {
  repeated FieldMeta field_metas = 1;
}

message ArrayMeta {
  TypeMeta element_type = 1;
}

message Row {
  repeated ProtoValue values = 1;
}